更新 LshLogUtils 优化Tracer相关